change: merubah dan menambahkan navigasi

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kevien-linktree",
   "private": true,
-  "homepage": "https://Kepin17.github.io/link-tree-kepin",
+  "homepage": "https://Kepin17.github.io/kevien-linktree",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
